--- a/Home_page/react-tailwindcss-portfolio-main/src/css/main.css
+++ b/Home_page/react-tailwindcss-portfolio-main/src/css/main.css
@@ -1478,3 +1478,224 @@ Ensure the default browser behavior of the `hidden` attribute.
     line-height: 2.25rem;
   }
 }
+
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap");
+
+.projects {
+  padding: 100px 0px;
+  
+}
+.projects .title {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+  justify-content: space-between;
+}
+.projects .title h3 {
+  text-transform: uppercase;
+  font-size: 24px;
+  line-height: 30px;
+  font-weight: 900;
+}
+.projects .title .btn {
+  max-width: 150px;
+  height: 50px;
+  background: linear-gradient(
+    to right,
+    var(--red-dark) 0%,
+    var(--red-dark) 21%,
+    var(--red) 100%
+  );
+  text-transform: uppercase;
+  border: 1px solid var(--red-dark);
+  font-weight: 600;
+  color: #fff;
+}
+
+.projects .title .btn:hover {
+  background: transparent;
+}
+
+.projects-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  
+}
+.projects-wrapper .project {
+  flex: 0 0 calc(50% - 10px);
+  max-width: calc(50% - 10px);
+  width: 100%;
+  margin-bottom: 30px;
+  
+}
+
+/* rectaingelka */
+
+.project .img-container {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #1e1e1e;
+  padding: 60px 0px;
+  overflow: hidden;
+  box-shadow: 0 9px 10px rgba(0, 0, 0, 0.5);
+  border-radius: 10px; /* Adjust the value to control the roundness of the corners */
+  /* border: 10px solid #3d0ad7; */
+
+}
+.project .img-container img {
+  width: 90%;
+  object-fit: cover;
+  height: 300px;
+  box-shadow: 0 5px 10px var(--dark);
+  transition: 0.3s;
+  
+}
+.project:hover .img-container img {
+  transform: scale(1.2);
+}
+.project .description {
+  margin: 15px 0px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 2px solid var(--red-dark);
+  border-top: 2px solid var(--red-dark);
+  padding: 15px 0px;
+}
+.project .description h4 {
+  font-size: 20px;
+  font-weight: 900;
+  text-transform: uppercase;
+}
+.project .links a {
+  margin-right: 15px;
+}
+.project i {
+  color: #fff;
+  font-size: 24px;
+  cursor: pointer;
+  transition: 0.3s;
+  color: var(--red-text);
+}
+.project i:hover {
+  color: #fff;
+}
+
+
+/* ============= Media Queries */
+@media (max-width: 969px) {
+  .services-experience::before {
+    width: 40%;
+  }
+  .services .service {
+    flex: 0 0 calc(50% - 10px);
+    max-width: calc(50% - 10px);
+    margin-bottom: 20px;
+  }
+  .project .img-container {
+    padding: 0px;
+  }
+  .project .img-container img {
+    width: 100%;
+    height: 100%;
+  }
+}
+@media (max-width: 767px) {
+  header .links {
+    display: none;
+  }
+  header .menu {
+    display: block;
+    font-size: 20px;
+    cursor: pointer;
+  }
+  header .mobile-links.active {
+    position: fixed;
+    top: 70px;
+    right: 0;
+    width: 250px;
+    transition: 0.3s;
+    display: block;
+    display: flex;
+    flex-direction: column;
+    background: var(--dark-light);
+    bottom: 0;
+    padding: 100px 40px;
+    z-index: 9;
+  }
+  header .mobile-links.active a {
+    font-size: 20px;
+    margin-bottom: 20px;
+    color: var(--red-text);
+    line-height: 30px;
+    transition: 0.3s;
+    display: inline;
+    padding-bottom: 3px;
+    border-bottom: 2px solid transparent;
+  }
+  header .mobile-links.active a:hover {
+    border-color: var(--red-text);
+  }
+  .banner .banner-wrapper {
+    flex-wrap: wrap;
+    height: auto;
+    padding: 50px 0px;
+  }
+  .banner .banner-img {
+    flex: 0 0 100%;
+    max-width: 100%;
+    margin-bottom: 20px;
+  }
+}
+
+@media (max-width: 660px) {
+  .projects-wrapper .project {
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
+  
+ 
+ 
+}
+
+@media (max-width: 500px) {
+  .portfolio {
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
+  section {
+    padding: 50px 0px !important;
+  }
+  .projects .title {
+    flex-wrap: wrap;
+  }
+  .projects .title .btn {
+    max-width: 100px;
+    font-size: 16px;
+    line-height: 24px;
+    height: 40px;
+    margin-bottom: 20px;
+  }
+  .projects .title h3 {
+    font-size: 20px;
+    line-height: 30px;
+    margin-bottom: 20px;
+  }
+}
+
+
+.shadow-border {
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  border: 1px solid #ccc;
+}
+
+/* .projects-wrapper {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 20px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  border: 1px solid #ccc;
+} */
