web view images

--- a/Home_page/react-tailwindcss-portfolio-main/src/css/main.css
+++ b/Home_page/react-tailwindcss-portfolio-main/src/css/main.css
@@ -1569,7 +1569,7 @@ Ensure the default browser behavior of the `hidden` attribute.
 .project .description h4 {
   font-size: 20px;
   font-weight: 900;
-  text-transform: capitalize;
+  text-transform: lowercase;
 }
 .project .links a {
   margin-right: 15px;
